--- a/ios/fastlane/app_privacy_details.json
+++ b/ios/fastlane/app_privacy_details.json
@@ -8,5 +8,14 @@
             "DATA_LINKED_TO_YOU",
             "DATA_USED_TO_TRACK_YOU"
         ]
+    },
+    {
+        "category": "HEALTH",
+        "purposes": [
+            "THIRD_PARTY_ADVERTISING"
+        ],
+        "data_protections": [
+            "DATA_LINKED_TO_YOU"
+        ]
     }
 ]
